12525 FIX Improve label colors
For the violet <i>explicit</i> labels the label color was too dark in the dark theme and the font color too dark in the light theme. Both stylings are fixed.

SUP-12008

--- a/web/htdocs/themes/facelift/scss/_pages.scss
+++ b/web/htdocs/themes/facelift/scss/_pages.scss
@@ -1452,10 +1452,8 @@ table.data.job_table td {
     content: none;
   }
 
-  &[readonly] {
-    tag > div {
-      padding: $tag-padding;
-    }
+  &[readonly] tag > div {
+    padding: $tag-padding;
   }
 
   a {
@@ -1501,9 +1499,6 @@ table.data.job_table td {
     &:hover > div {
       background: $input-background-color;
       opacity: 1;
-    }
-
-    > div {
       color: $font-color-black;
     }
   }
@@ -1515,7 +1510,7 @@ table.data.job_table td {
   tag,
   &[readonly] tag {
     > div {
-      background: rgba(0, 168, 181, $tag-opacity);
+      background: rgba($tag-color, $tag-opacity);
       border-radius: $theme-border-radius;
       box-shadow: none;
       animation: none;
@@ -1526,17 +1521,20 @@ table.data.job_table td {
     }
 
     &.explicit > div {
-      background: rgba(119, 72, 152, $tag-opacity);
+      background: $tag-explicit-color;
     }
 
     &.discovered > div {
-      background: rgba(243, 174, 75, $tag-discovered-opacity);
+      background: rgba($tag-discovered-color, $tag-discovered-opacity);
     }
 
     &.ruleset > div {
-      background: rgba(222, 67, 131, $tag-opacity);
+      background: rgba($tag-ruleset-color, $tag-opacity);
+    }
 
-      span.tagify__tag-text {
+    &.explicit,
+    &.ruleset {
+      > div span.tagify__tag-text {
         color: $font-color-white;
       }
     }
